refactor to Stream.toList