@@ -12,7 +12,6 @@ package org.eclipse.emf.parsley.tests.util;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.eclipse.emf.common.notify.Notification;
 import org.eclipse.emf.common.notify.impl.AdapterImpl;
@@ -31,7 +30,7 @@ public class TestAdapter extends AdapterImpl {
 	public String notificationsToString() {
 		return notifications.stream()
 			.map(n -> "eventType: " + n.getEventType() + ", Notifier: " + eObjectToString(n.getNotifier()))
-			.collect(Collectors.toList())
+			.toList()
 			.toString();
 	}
 
